 * Fix: Use previous avatar when using the reconnect button after a disconnect.
 * Fix: Don't trigger a cacophony of notifications after joining a session, just play a single notification once catchup is done instead.
 * Feature: Store alpha preserve state of layers in ORA files for better Krita compatibility (will be in Krita 5.2.1 probably.)

2023-09-30 Version 2.2.0-beta.8
 * Fix: Apply color wheel direction to color dialogs too. Thanks Blozzom for reporting.
 * Fix: Don't smoothe the canvas view when at 100% zoom with the canvas rotated at a right angle, since that just blurs it for no reason. Thanks SadColor for reporting.
 * Fix: Make flipbook shortcut work while the flipbook is in focus, causing it to refresh its view.
 * Fix: Cap flipbook range properly, rather than letting you set a range beyond the last frame.
 * Fix: Remove the useless "?" button from dialogs in Windows. Thanks vipperz for reporting.
 * Fix: Turn off input event compression, which causes jaggy lines on slow devices.
 * Feature: Draw a hatching pattern on frames in the timeline that are the same as the currently visible one, making it easier to figure out if it's being re-used.
 * Fix: Make flipbook extend the playback range if it was on the last frame and new ones are added to the timeline.
 * Feature: Bring back dprectool, the command-line tool that converts Drawpile recordings. It should work mostly the same as it did in Drawpile 2.1.
 * Feature: Apply parent folder opacity to frames within it, useful for sketch tracks. Thanks to TeaLord9000 for suggesting.
 * Feature: Add a "small screen" mode, which should make the application usable on phones. Thanks to Verdrusk for suggesting.
 * Feature: Allow changing the application font size, rather than using the system default that may be garbage, especially on Android. Also Verdrusk's fault.
 * Feature: Locking docks now also locks toolbars, rather than still allowing you to move them around on accident.