@@ -39,6 +39,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Use previous avatar when using the reconnect button after a disconnect.
  * Fix: Don't trigger a cacophony of notifications after joining a session, just play a single notification once catchup is done instead.
  * Feature: Store alpha preserve state of layers in ORA files for better Krita compatibility (will be in Krita 5.2.1 probably.)
+ * Feature: Allow onion skins to wrap around the timeline, toggleable in the onion skins dock. Thanks Hopfel for suggesting.
 
 2023-09-30 Version 2.2.0-beta.8
  * Fix: Apply color wheel direction to color dialogs too. Thanks Blozzom for reporting.
